test/simple/ill-typed/singletype_int_bool.caprice
(* TEST
  include refutable;
*)


let t : singletype int = bool
